@@ -12,6 +12,8 @@
 * Added BNetUser.toStringEx() to display ping and flags
 * Fixed a bug where 'commander access' was not passed to commands properly
 * Added a 'setauth' command
+* Added a version editor utility
+* Added an option to disable tab completion
 
 2.0.3 (r1072) 2008-01-07:
 * Completely redesigned the command subsystem to fit a more object-oriented model
